# agent_gm

./: .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.local.json
config/: agents.yaml  settings.yaml
notebooks/: get_past_messages.ipynb
scripts/: generate_world.py  map_viewer.py  migrate_add_map_fields.py  run_world_forge_on_existing_world.py  world_viewer.py
src/: __init__.py  config.py
src/agents/: __init__.py  base.py  callback_context.py  creation_agent.py  dm_orchestrator.py  economy_agent.py  factory.py  npc_agent.py  research_agent.py  world_forge.py
src/agents/core/: __init__.py  base_agent.py
src/core/: __init__.py  results.py  types.py
src/game/: __init__.py  context.py  session.py  session_manager.py
src/models/: __init__.py  base.py  faction.py  item.py  location.py  npc.py  player.py  quests.py  world_bible.py  world_state.py
src/repositories/: __init__.py  base.py  location_repository.py  npc_repository.py  player_repository.py  unit_of_work.py
src/services/: __init__.py  asset_manager.py  image_generator.py
src/tools/: __init__.py  agents_as_tools.py  narration.py  world_read.py  world_write.py
src/tools/compound/: __init__.py  conversation.py
src/tools/core/: __init__.py  decorators.py  registry.py
src/tools/world_read/: __init__.py  connections.py  events.py  factions.py  locations.py  npcs.py  player.py  quests.py  world_bible.py  world_state.py
src/tools/world_write/: __init__.py  events.py  (+8 more)
src/web/: __init__.py  server.py  streaming.py
strands_semantic_memory/: semantic_conversation_manager.py
(+2 files in other folders)
