[project]
name = "agent-gm"
version = "0.1.0"
description = "Multi-agent text game dungeon master"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "strands-agents[litellm]>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "sqlalchemy>=2.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "plotly>=6.5.0",
    "streamlit-plotly-events>=0.0.6",
    "sentence-transformers>=5.2.0",
    "numpy<2.4",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.0.0",
    "ipykernel>=7.1.0",
    "notebook>=7.5.1",
    "pillow>=11.3.0",
    "httpx>=0.27.0",
    "llvmlite>=0.46.0",
    "numba>=0.63.1",
    "rembg[cpu]>=2.0.69",
    "loguru>=0.7.3",
]

[project.scripts]
agent-gm = "main:main"
